--- a/hello_gleam/rebar.config
+++ b/hello_gleam/rebar.config
@@ -14,5 +14,17 @@
 {project_plugins, [rebar_gleam]}.
 
 {deps, [
-    {gleam_stdlib, "0.8.0"}
+    {gleam_stdlib, "0.8.0"},
+    {gleam_otp, {git, "https://github.com/gleam-lang/otp.git", {ref, "ee0e276"}}},
+    {gleam_http, {git, "https://github.com/gleam-lang/http", {ref, "57f516a"}}},
+    {gleam_elli, {git, "https://github.com/gleam-experiments/elli.git", {ref, "5bcf06a"}}},
+    {elli, "3.2.0"}
+]}.
+
+{relx, [
+    {release, {hello_gleam, "0.0.1"},
+     [hello_gleam],
+     [{dev_mode, true},
+      {include_erts, false},
+      {extended_start_script, true}]}
 ]}.
